--- a/scss/module/_footer.scss
+++ b/scss/module/_footer.scss
@@ -2,8 +2,10 @@
 #footer {
 	position: absolute;
 	width: 100%;
-	height: 25px;
 	bottom: 0px;
-	background: lightgray;
-	visibility: hidden;
+
+	#music-switch {
+		display: inline-block;
+		padding: 5px 10px; 
+	}
 }
