--- a/scss/module/_main.scss
+++ b/scss/module/_main.scss
@@ -116,6 +116,12 @@ a { text-decoration: none; }
 			color: white;
 			padding: 10px 20px;
     		@include border-radius( 0px 0px $button-border-rd $button-border-rd );
+		
+			img {
+				display: inline-block;
+			    vertical-align: middle;
+			    padding-right: 1em;
+			}
 		}
 	}
 }
